--- a/templates/home/my_account.html
+++ b/templates/home/my_account.html
@@ -180,8 +180,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-12">
-                        <div class="account-box">
+                    <div class="col-lg-4 col-md-12"><div class="account-box">
                             <div class="service-box">
                                 <div class="service-desc">
                                     <h4>Shopping programs and rentals</h4>
@@ -204,7 +203,7 @@
     <div class="main-instagram owl-carousel owl-theme">
         <div class="item">
             <div class="ins-inner-box">
-                <img src="images/instagram-img-01.jpg" alt=""/>
+                <img src="images/traffic.jpg" alt=""/>
                 <div class="hov-in">
                     <a href="#"><i class="fab fa-instagram"></i></a>
                 </div>
