--- a/templates/home/owner_cars.html
+++ b/templates/home/owner_cars.html
@@ -4,13 +4,8 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
-                <h2><i class="fa fa-user"></i> {{ owner.name }}</h2>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-12 hidden-xs-down hidden-sm-down">
-
-
-                    <li class="breadcrumb-item active">{{ owner.name }}</li>
-                </ol>
             </div>
         </div>
     </div>
@@ -23,11 +18,11 @@
                 <div class="page-wrapper">
                     <div class="custombox authorbox clearfix">
                         <h4 class="small-title">About  Owner</h4>
-                        <h4><a href="{% url 'my_account' %}">{{ user.name }}</a></h4>
+                        <h4><a href="{% url 'my_account' %}">{{ user.username }}</a></h4>
 
                         <div class="row">
                             <div class="col-lg-2 col-md-2 col-sm-2 col-xs-12">
-                                <img src="{{ user.image.url }}" alt="" class="img-fluid rounded-circle">
+                                <img src="{{ user.image }}" alt="" class="img-fluid rounded-circle">
                             </div>
                             <div class="col-lg-10 col-md-10 col-sm-10 col-xs-12">
                                 <h4><a href="{% url 'my_account' %}">{{ user.name }}</a></h4>
@@ -53,7 +48,7 @@
                                 <p>{{ car.car|truncatechars:300 }}</p>
 
                                 <small><a href="{% url 'read_more' car.id %}">{{ car.date_created }}</a></small>
-                                <small><a href="#">owner {{ owner.name }}</a></small>
+                                <small><a href="#">owner {{ user.username }}</a></small>
                                 <small><a href="{% url 'read_more' car.id %}"><i class="fa fa-eye"></i></a></small>
                             </div>
                         </div>
